package hypervisor

import (
	"context"
	"fmt"
	"sync"

	ec1v1 "github.com/walteh/ec1/gen/proto/golang/ec1/v1poc1"
)

// AppleDriver implements the Driver interface for macOS using Virtualization.framework
type AppleDriver struct {
	// Map to keep track of running VMs
	vms     map[string]*appleVM
	vmMutex sync.RWMutex
}

// appleVM represents a running VM instance
type appleVM struct {
	id         string
	ipAddress  string
	status     ec1v1.VMStatus
	name       string
	resources  *ec1v1.Resources
	diskPath   string
	portFwds   []*ec1v1.PortForward
	networkCfg *ec1v1.VMNetworkConfig
}

// NewAppleDriver creates a new driver for macOS virtualization
func NewAppleDriver(ctx context.Context) (*AppleDriver, error) {
	// In a real implementation, we would check for Virtualization.framework availability
	// and possibly load any necessary libraries

	return &AppleDriver{
		vms: make(map[string]*appleVM),
	}, nil
}

// Helper function to convert string to string pointer
func strPtr(s string) *string {
	return &s
}

// Helper function to convert bool to bool pointer
func boolPtr(b bool) *bool {
	return &b
}

// Helper function to convert VMStatus to VMStatus pointer
func statusPtr(s ec1v1.VMStatus) *ec1v1.VMStatus {
	return &s
}

// StartVM implements the Driver interface
func (d *AppleDriver) StartVM(ctx context.Context, req *ec1v1.StartVMRequest) (*ec1v1.StartVMResponse, error) {
	// In a real implementation, this would use Virtualization.framework to start a VM
	// For this POC, we'll simulate the process

	// Generate a simple VM ID
	vmID := fmt.Sprintf("mac-vm-%s", req.GetName())

	// Create a new VM instance
	vm := &appleVM{
		id:         vmID,
		name:       req.GetName(),
		resources:  req.ResourcesMax,
		diskPath:   req.GetDiskImagePath(),
		status:     ec1v1.VMStatus_VM_STATUS_STARTING,
		networkCfg: req.NetworkConfig,
	}

	// In a real implementation, this would:
	// 1. Create a VZVirtualMachineConfiguration
	// 2. Configure memory, CPU, disk, network
	// 3. Create and start the VM
	// 4. Determine the VM's IP address

	// For the POC, we'll simulate a successful start and assign a fake IP
	vm.status = ec1v1.VMStatus_VM_STATUS_RUNNING
	vm.ipAddress = "192.168.64.10" // Simulated IP for the POC

	// Store the VM
	d.vmMutex.Lock()
	d.vms[vmID] = vm
	d.vmMutex.Unlock()

	return &ec1v1.StartVMResponse{
		VmId:      strPtr(vmID),
		IpAddress: strPtr(vm.ipAddress),
		Status:    statusPtr(vm.status),
	}, nil
}

// StopVM implements the Driver interface
func (d *AppleDriver) StopVM(ctx context.Context, req *ec1v1.StopVMRequest) (*ec1v1.StopVMResponse, error) {
	d.vmMutex.RLock()
	vm, exists := d.vms[req.GetVmId()]
	d.vmMutex.RUnlock()

	if !exists {
		return &ec1v1.StopVMResponse{
			Success: boolPtr(false),
			Error:   strPtr(fmt.Sprintf("VM with ID %s not found", req.GetVmId())),
		}, nil
	}

	// In a real implementation, this would stop the VM gracefully or forcefully
	// For the POC, we'll simulate the process

	// Mark the VM as stopping
	d.vmMutex.Lock()
	vm.status = ec1v1.VMStatus_VM_STATUS_STOPPING
	d.vmMutex.Unlock()

	// In a real implementation, we would wait for the VM to stop
	// For the POC, we'll simulate immediate completion

	d.vmMutex.Lock()
	vm.status = ec1v1.VMStatus_VM_STATUS_STOPPED
	d.vmMutex.Unlock()

	return &ec1v1.StopVMResponse{
		Success: boolPtr(true),
	}, nil
}

// GetVMStatus implements the Driver interface
func (d *AppleDriver) GetVMStatus(ctx context.Context, req *ec1v1.GetVMStatusRequest) (*ec1v1.GetVMStatusResponse, error) {
	d.vmMutex.RLock()
	vm, exists := d.vms[req.GetVmId()]
	d.vmMutex.RUnlock()

	if !exists {
		return &ec1v1.GetVMStatusResponse{
			Status: statusPtr(ec1v1.VMStatus_VM_STATUS_UNSPECIFIED),
			Error:  strPtr(fmt.Sprintf("VM with ID %s not found", req.GetVmId())),
		}, nil
	}

	return &ec1v1.GetVMStatusResponse{
		Status:    statusPtr(vm.status),
		IpAddress: strPtr(vm.ipAddress),
	}, nil
}

// GetHypervisorType implements the Driver interface
func (d *AppleDriver) GetHypervisorType() ec1v1.HypervisorType {
	return ec1v1.HypervisorType_HYPERVISOR_TYPE_MAC_VIRTUALIZATION
}
