package hypervisor

import (
	"context"
	"fmt"
	"sync"

	ec1v1 "github.com/walteh/ec1/gen/proto/golang/ec1/v1poc1"
)

// KVMDriver implements the Driver interface for Linux using KVM
type KVMDriver struct {
	// Map to keep track of running VMs
	vms     map[string]*kvmVM
	vmMutex sync.RWMutex
}

// kvmVM represents a running VM instance
type kvmVM struct {
	id         string
	ipAddress  string
	status     ec1v1.VMStatus
	name       string
	resources  *ec1v1.Resources
	diskPath   string
	portFwds   []*ec1v1.PortForward
	networkCfg *ec1v1.VMNetworkConfig
}

// NewKVMDriver creates a new driver for KVM virtualization
func NewKVMDriver(ctx context.Context) (*KVMDriver, error) {
	// In a real implementation, we would check for KVM availability
	// and possibly set up libvirt or direct QEMU access

	return &KVMDriver{
		vms: make(map[string]*kvmVM),
	}, nil
}

// StartVM implements the Driver interface
func (d *KVMDriver) StartVM(ctx context.Context, req *ec1v1.StartVMRequest) (*ec1v1.StartVMResponse, error) {
	// In a real implementation, this would use KVM/QEMU to start a VM
	// For this POC, we'll simulate the process

	// Generate a simple VM ID
	vmID := fmt.Sprintf("kvm-vm-%s", req.GetName())

	// Create a new VM instance
	vm := &kvmVM{
		id:         vmID,
		name:       req.GetName(),
		resources:  req.ResourcesMax,
		diskPath:   req.GetDiskImagePath(),
		status:     ec1v1.VMStatus_VM_STATUS_STARTING,
		networkCfg: req.NetworkConfig,
	}

	// In a real implementation, this would:
	// 1. Construct a QEMU command or libvirt XML definition
	// 2. Configure memory, CPU, disk, network (with port forwarding)
	// 3. Start the VM process or call libvirt to create the domain
	// 4. Determine the VM's IP address via DHCP or static assignment

	// For example, construct a QEMU command like:
	// qemu-system-x86_64 -enable-kvm -m 128 -cpu host \
	//   -drive file=nestvm.qcow2,if=virtio \
	//   -nic user,hostfwd=tcp::8080-:80

	// For the POC, we'll simulate a successful start and assign a fake IP
	vm.status = ec1v1.VMStatus_VM_STATUS_RUNNING
	vm.ipAddress = "192.168.122.10" // Simulated IP for the POC

	// Store the VM
	d.vmMutex.Lock()
	d.vms[vmID] = vm
	d.vmMutex.Unlock()

	return &ec1v1.StartVMResponse{
		VmId:      strPtr(vmID),
		IpAddress: strPtr(vm.ipAddress),
		Status:    statusPtr(vm.status),
	}, nil
}

// StopVM implements the Driver interface
func (d *KVMDriver) StopVM(ctx context.Context, req *ec1v1.StopVMRequest) (*ec1v1.StopVMResponse, error) {
	d.vmMutex.RLock()
	vm, exists := d.vms[req.GetVmId()]
	d.vmMutex.RUnlock()

	if !exists {
		return &ec1v1.StopVMResponse{
			Success: boolPtr(false),
			Error:   strPtr(fmt.Sprintf("VM with ID %s not found", req.GetVmId())),
		}, nil
	}

	// In a real implementation, this would:
	// 1. If using libvirt, call virDomainDestroy or virDomainShutdown
	// 2. If using QEMU directly, send a signal to the QEMU process

	// Mark the VM as stopping
	d.vmMutex.Lock()
	vm.status = ec1v1.VMStatus_VM_STATUS_STOPPING
	d.vmMutex.Unlock()

	// For the POC, we'll simulate immediate completion
	d.vmMutex.Lock()
	vm.status = ec1v1.VMStatus_VM_STATUS_STOPPED
	d.vmMutex.Unlock()

	return &ec1v1.StopVMResponse{
		Success: boolPtr(true),
	}, nil
}

// GetVMStatus implements the Driver interface
func (d *KVMDriver) GetVMStatus(ctx context.Context, req *ec1v1.GetVMStatusRequest) (*ec1v1.GetVMStatusResponse, error) {
	d.vmMutex.RLock()
	vm, exists := d.vms[req.GetVmId()]
	d.vmMutex.RUnlock()

	if !exists {
		return &ec1v1.GetVMStatusResponse{
			Status: statusPtr(ec1v1.VMStatus_VM_STATUS_UNSPECIFIED),
			Error:  strPtr(fmt.Sprintf("VM with ID %s not found", req.GetVmId())),
		}, nil
	}

	// In a real implementation, we would query the VM status from libvirt or QEMU

	return &ec1v1.GetVMStatusResponse{
		Status:    statusPtr(vm.status),
		IpAddress: strPtr(vm.ipAddress),
	}, nil
}

// GetHypervisorType implements the Driver interface
func (d *KVMDriver) GetHypervisorType() ec1v1.HypervisorType {
	return ec1v1.HypervisorType_HYPERVISOR_TYPE_KVM
}
